Fixes tooltip alignment in chrome

--- a/css/global.css
+++ b/css/global.css
@@ -376,11 +376,12 @@ ul {
           #dot-navigation-container{
                /*background-color:white;*/
                height:auto;
-               left:97%;
+               left:96%;
                position:fixed;
                top:35%;
-               width:auto;
+               width:3%;
                z-index:9;
+               text-align:right;
           }
 
           #dot-navigation-container ul{
@@ -405,14 +406,14 @@ ul {
             border-radius: 2px;
             color: #fff;
             content: attr(data-title);
-            right:35px;
-            padding: 5px 5px 2px 5px;
+            padding: 6px 5px 3px 5px;
             position: absolute;
+            right:30px;
             z-index: 98;
             white-space: nowrap;
             color:#efefef;
             font-size:16px;
-            line-height:14px;
+            line-height:16px;
           }
 
           .navigation-dot.hover{
